--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto&family=Saira+Condensed&display=swap" rel="stylesheet">
+    <!-- Your HTML code -->
+    <!-- Include the necessary Toastify CSS and JS files -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <!-- ... Rest of your Vue.js component template ... -->
+
   </head>
   <body>
     <div id="app"></div>
